@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2008,v 1.249 2008/02/09 07:28:21 adam Exp $
+$NetBSD: CHANGES-2008,v 1.250 2008/02/09 14:53:14 reed Exp $
 
 Changes to the packages collection and infrastructure in 2008:
 
@@ -435,3 +435,4 @@ Changes to the packages collection and infrastructure in 2008:
 	Updated www/rails to 2.0.2 [minskim 2008-02-09]
 	Updated databases/unixodbc to 2.2.12 [adam 2008-02-09]
 	Updated databases/iodbc to 3.52.6 [adam 2008-02-09]
+	Updated lang/pcc to 0.9.9 [reed 2008-02-09]
